RESOLVED FIXED240015
Indeterminate, checked checkboxes do not render correctly on iOS, GTK, and Windows
https://bugs.webkit.org/show_bug.cgi?id=240015
Summary Indeterminate, checked checkboxes do not render correctly on iOS, GTK, and Wi...
Aditya Keerthi
Reported 2022-05-03 08:55:20 PDT
...
Attachments
Patch (5.08 KB, patch)
2022-05-03 08:57 PDT, Aditya Keerthi
no flags
Patch (7.48 KB, patch)
2022-05-04 12:24 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2022-05-03 08:55:30 PDT
Aditya Keerthi
Comment 2 2022-05-03 08:57:22 PDT
Aditya Keerthi
Comment 3 2022-05-04 12:24:17 PDT
Aditya Keerthi
Comment 4 2022-05-04 18:15:49 PDT
Comment on attachment 458821 [details] Patch Thanks for the review!
EWS
Comment 5 2022-05-04 18:54:34 PDT
Committed r293812 (250285@main): <https://commits.webkit.org/250285@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458821 [details].
Note You need to log in before you can comment on or make changes to this bug.