Indeterminate, checked checkboxes do not render correctly on iOS, GTK, and Windows https://bugs.webkit.org/show_bug.cgi?id=240015 rdar://92645056

Reviewed by Cameron McCormack.

Source/WebCore:

Checkboxes can have the indeterminate and checked attributes set to
true at the same time. In this scenario, an indeterminate appearance
should be rendered. Reorder logic to ensure that the indeterminate
attribute has precedence when deciding what to draw. This approach
aligns with the macOS logic in ThemeMac.

Test: fast/forms/checkbox-checked-indeterminate.html

* platform/adwaita/ThemeAdwaita.cpp:
(WebCore::ThemeAdwaita::paintCheckbox):
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::paintCheckbox):
* rendering/RenderThemeWin.cpp:
(WebCore::RenderThemeWin::determineState):

LayoutTests:

Added a reference test to to verify that indeterminate, checked
checkboxes have the same appearance as indeterminate checkboxes.

* fast/forms/checkbox-checked-indeterminate-expected.html: Added.
* fast/forms/checkbox-checked-indeterminate.html: Added.

Canonical link: https://commits.webkit.org/250285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293812 268f45cc-cd09-0410-ab3c-d52691b4dbfc